# Remote-Storage

./: Cargo.toml
src/: CreateAccount.rs  Redirect.rs  ServerFTP.rs  ServerLogin.rs  bincodeFile.rs  bincodeclient.rs  client.rs  clientLogin.rs  clientRequests.rs  clientUpload.rs  cr.txt  credits.db  database.rs  downloadFiletoClient.sh  main.rs  main.test.rs  onetimeDownload.py  parseDB.rs  receiver.py  search.py  send.py  serverSendFile.py  setup.sh  validuser.rs  verifyCredits.rs  verifyFiledata.rs
src/UserFolders/43779aafe3d07dcddefa257eb32b9752b2cd5193/: cr.txt
