[package]
name = "CN_Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["full"] }
serde_json = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
sha-1 = "0.10.1"
rusqlite = "0.29.0"

[[bin]]
name = "client"
path = "src/client.rs"
[[bin]]
name = "bincodeFile"
path = "src/bincodeFile.rs"
[[bin]]
name = "bincodeclient"
path = "src/bincodeclient.rs"
[[bin]]
name = "CA"
path = "src/CreateAccount.rs"
[[bin]]
name = "parseDB"
path = "src/parseDB.rs"
[[bin]]
name = "ServerLogin"
path = "src/ServerLogin.rs"
[[bin]]
name = "Redirect"
path = "src/Redirect.rs"